Updated to complete final sentence of DLM description

--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -402,7 +402,7 @@ To better represent the dynamic nature of sibling or cohort relationships over t
 
 $$\hat{R^{1.3}_t} = \alpha_t + \beta_t{R^{1.2}_{t-1}} + \epsilon_t$$
 
-Both regression parameters are described by a random walk (i.e. $\alpha_t \sim Normal(\alpha_{t-1},\sigma^2_{\alpha})$ and $\beta_t \sim Normal(\beta_{t-1},\sigma^2_{\beta})$), and errors were assumed normally-distributed ($\epsilon_t \sim Normal(0,\sigma^2_{\epsilon})$). DLMs were implemented using the Multivariate Autoregressive State-Space Modelling (MARSS) package (version 3.10.12) in R [@holmes2012; @holmes2020]. The full timeseries (brood year 1963 forward) of age and river system specific abundances reconstructed by @cunningham2019  were for model fitting. For example, to predict the abundance of the 1.2 age class returning to the Wood River system in 2010, the DLM model was fit to available data 1963-2009, with the 1.1 age class in prior years assumed a priori to be most informative the predictor sibling 
+Both regression parameters are described by a random walk (i.e. $\alpha_t \sim Normal(\alpha_{t-1},\sigma^2_{\alpha})$ and $\beta_t \sim Normal(\beta_{t-1},\sigma^2_{\beta})$), and errors were assumed normally-distributed ($\epsilon_t \sim Normal(0,\sigma^2_{\epsilon})$). DLMs were implemented using the Multivariate Autoregressive State-Space Modelling (MARSS) package (version 3.10.12) in R [@holmes2012; @holmes2020]. The full timeseries (brood year 1963 forward) of age and river system specific abundances reconstructed by @cunningham2019  were for model fitting. For example, to predict the abundance of the 1.2 age class returning to the Wood River system in 2010, the DLM model was fit to available data 1963-2009, with the 1.1 age class in prior years assumed a priori to be the most informative sibling abundance predictor. 
 
 ## Empirical Dynamic Modeling {.unnumbered}
 
