--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -255,7 +255,10 @@ ens_r2 <- top_ensemble_system_forecast %>% group_by(system) %>% yardstick::rsq(o
 
 ## Title   {.unnumbered}
 
-Improving Forecasts of Sockeye Salmon (*Oncorhynchus nerka*) with Modern Computational Tools. 
+<!-- Improving Forecasts of Sockeye Salmon (*Oncorhynchus nerka*) with Modern Computational Tools.  -->
+
+Improving Forecasts of Sockeye Salmon (*Oncorhynchus nerka*) with Parametric and Non-Parametric Models
+
 
 ## Author List {.unnumbered}
 
@@ -278,7 +281,7 @@ Daniel Ovando^a^\*, Curry Cunningham^b^,Peter Kuriyama^c^,Christopher Boatright^
 
 ## Abstract {.unnumbered}
 
-Accurate forecasts of sockeye salmon (*Oncorhynchus nerka*) in Bristol Bay, Alaska, play an important role in management and harvesting decisions for this culturally and ecologically vital species. We used a suite of modern computational tools to assess the frontiers in forecast accuracy of Bristol Bay sockeye salmon possible given currently-available data. In retrospective performance testing individual models were capable of reducing pre-season forecast error at the river system level by on average `r percent(comp_sys_improvement$imp_on_fri)` relative to a benchmark model. We utilized an ensemble modeling approach to produce pre-season forecasts based on historic performance of individual models. This ensemble model reduced river system level forecast error by `r percent(comp_ens_sys_improvement$improv_amnt)` on average in `r comp_ens_sys_improvement$n_improv` of the `r n_distinct(system_forecast$system)` evaluated river systems, though it increased forecast error by `r percent(-comp_ens_sys_improvement$worse_amnt)` on average in the remaining `r n_distinct(system_forecast$system) - comp_ens_sys_improvement$n_improv` systems. We found potential for modest improvements in forecast accuracy across a variety of scales. However all tested models failed to accurately predict certain periods in the abundance timeseries, indicating that further forecast improvements depend on novel data rather than more flexible models.
+Accurate forecasts of sockeye salmon (*Oncorhynchus nerka*) in Bristol Bay, Alaska, play an important role in management and harvesting decisions for this culturally and ecologically vital species. We used a suite of parametric and non-parametric models to assess the frontiers in forecast accuracy of Bristol Bay sockeye salmon possible given currently-available data. In retrospective performance testing individual models were capable of reducing pre-season forecast error at the river system level by on average `r percent(comp_sys_improvement$imp_on_fri)` relative to a benchmark model. We utilized an ensemble modeling approach to produce pre-season forecasts based on historic performance of individual models. This ensemble model reduced river system level forecast error by `r percent(comp_ens_sys_improvement$improv_amnt)` on average in `r comp_ens_sys_improvement$n_improv` of the `r n_distinct(system_forecast$system)` evaluated river systems, though it increased forecast error by `r percent(-comp_ens_sys_improvement$worse_amnt)` on average in the remaining `r n_distinct(system_forecast$system) - comp_ens_sys_improvement$n_improv` systems. We found potential for modest improvements in forecast accuracy across a variety of scales. However all tested models failed to accurately predict certain periods in the abundance timeseries, indicating that further forecast improvements likely depend on novel data rather than more flexible models.
 
 <!-- Our results demonstrate both the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems. -->
 
@@ -296,28 +299,48 @@ Alaska, Salmon,Machine learning,Empirical Dynamic Modeling, Dynamic Linear Model
 
 # Introduction {.unnumbered}
 
-Animal populations exhibit complex dynamics driven by interactions with many aspects of their ecosystem. Predicting the outcomes of these dynamics is a critical task of natural resource management; Forecasts of future abundance are often used to set fisheries regulations, vessel operators may make decisions about alternative fisheries based on predicted abundance, and industries and communities use forecasts to inform long-term and short-term investment plans in staffing and production capacity. The past two decades have seen explosive progress in the ability of modern "computer age" [@efron2016] tools to improve prediction, revolutionizing fields such as financial modeling, weather forecasting, and medicine. However, these methods remain relatively unused in ecological forecasting, particularly in an applied setting [@peters2014]. We use the ecologically and economically critical sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska to demonstrate the use of modern computation tools in applied predictive modeling, and show how they can be used to identify frontiers in forecast accuracy given currently available data.
+Animal populations exhibit complex dynamics driven by interactions with many aspects of their ecosystem. Predicting the outcomes of these dynamics is a critical task of natural resource management; Forecasts of future abundance are often used to set fisheries regulations, vessel operators may make decisions about alternative fisheries based on predicted abundance, and industries and communities use forecasts to inform long-term and short-term investment plans in staffing and production capacity. The past two decades have seen explosive progress in the ability of modern "computer age" [@efron2016] parametric and non-parametric models to improve prediction, revolutionizing fields such as financial modeling, weather forecasting, and medicine. However, these methods remain relatively unused in applied ecological forecasting [@peters2014]. We use the ecologically and economically critical sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska to assess the potential of a range of predictive modeling techniques to improve pre-season forecasts and identify frontiers in forecast accuracy achievable given currently available data.
 
 <!-- However, the methods used to make these ecological predictions are often decades old and generally do not go beyond forward projection from age-structured models. -->
 
 
 
+Sockeye salmon are semelparous,  born in freshwater where they spend the first one or more years of their lives. Eventually, these fish migrate to the ocean, where they live the remainder of their lives until returning to their natal river systems to spawn and then die. Sockeye salmon exhibit life history variation in the number of years they spend in these freshwater and oceanic phases, representing distinct “age groups”. Following conventions in the salmon literature, we denote age groups here by the format “years spent in freshwater.years spent in the ocean.” For example, a fish in the 1.2 age group spent one winter post-hatching in freshwater and migrating to sea two years after it was spawned, and two winters in the ocean before returning to freshwater to spawn. The Bristol Bay sockeye salmon fishery is primarily made up of salmon from seven different river systems, each of which is managed as a separate stock (Fig.\@ref(fig:returns)).
+
 The commercial salmon fishery in Bristol Bay, Alaska is the single largest sockeye salmon fishery in the world [@steiner2011]. The estimated wholesale value of the Bristol Bay commercial sockeye harvest was \$390 million USD in 2010, providing approximately one-sixth of the total value of all United States seafood exports [@knapp2013]. The value of the Bristol Bay fishery has continued to grow, reaching \$508 million in 2017 [@mcdowellgroup2018]. Salmon returning to Bristol Bay also provide vital food security for subsistence-dependent Alaskan communities, and are critical vectors of marine-derived nutrients that support vibrant freshwater habitats [@naiman2002; @schindler2003]. Sustainable management of the Bristol Bay salmon fishery depends in part on the accuracy of preseason forecasts for salmon abundance, which inform development and implementation of inseason harvest strategies and successful operation of subsistence and commercial fisheries. Preseason forecasts are also important for planning by the processing industry, as a basis for identifying the appropriate level of supplies, equipment, and personnel necessary to process the annual harvest. As such, the accuracy of salmon forecasts have a direct influence on the profitability and efficiency of the salmon industry as a whole.
 
-The Fisheries Research Institute (FRI) at the University of Washington and the Alaska Department of Fish and Game (ADFG) have been providing preseason forecasts for the annual abundance of sockeye salmon returning to the major river systems and fishing districts of Bristol Bay since at least 1967 (Cunningham pers. comm.). While the exact statistical methods used for FRI and ADFG forecasts have evolved over time, throughout their history they have primarily been based on the relationship between the abundance of successive age classes of salmon returning in different years. While these traditional forecast methods have been useful in guiding decisions by fishers, processors, and managers alike, improvements in the accuracy and precision of preseason forecasts would represent a valuable advance.
 
-Sockeye salmon are semelparous,  born in freshwater where they spend the first one or more years of their lives. Eventually, these fish migrate to the ocean, where they live the remainder of their lives until returning to their natal river systems to spawn and then die. Sockeye salmon exhibit life history variation in the number of years they spend in these freshwater and oceanic phases, representing distinct “age groups”. Following conventions in the salmon literature, we denote age groups here by the format “years spent in freshwater.years spent in the ocean.” For example, a fish in the 1.2 age group spent one winter post-hatching in freshwater and migrating to sea two years after it was spawned, and two winters in the ocean before returning to freshwater to spawn. The Bristol Bay sockeye salmon fishery is primarily made up of salmon from seven different river systems, each of which is managed as a separate stock (Fig.\@ref(fig:returns)).
 
 ```{r returns, fig.cap = "Annual total abundance of returning sockeye salmon (*Oncorhynchus nerka*) to Bristol Bay, Alaska (A), by river system (B), and by age group (C). Numbers in millions of salmon. Age group is formatted by ‘years spent in freshwater’.‘years spent in ocean’. Map adapted from @cunningham2019.", fig.width=7, fig.asp=.8}
 return_plot
 ```
 
-Why might we expect modern computational tools to be well-suited to the task of salmon forecasting? Methods such as machine learning excel at identifying and exploiting potentially complex correlations between variables in a system. Conversely, "traditional" parametric statistical methods often restrict themselves to simplified (e.g. linear) and often non-dynamic representations of natural systems, both for analytical tractability and to facilitate heuristic understanding of underlying processes. Typically, these parametric statistical methods are concerned with explicitly estimating and interpreting model parameters rather than solely forecasting responses, such as population size [@beyan2020; @malde2020]. We would expect modern computational tools to show substantial improvement in predictive power when the "true" underlying system linking observed variables and outcomes differs dramatically from the simplified representations of the system approximated by conventional statistical approaches. In the case of salmon, we know that inter-annual variation in run sizes is affected by a wide range of ecosystem variables, including spawning success, river conditions, oceanic predator and prey abundance, and competition with other salmonids [@connors2020]. By reducing the potential for predictive model misspecification, modern computation tools that essentially seek to “learn” the best model structure for the sole purpose of maximizing out-of-sample predictive performance can provide a test of the predictive information content of the available data themselves.
 
-Rather than incorporate factors such as environmental drivers directly, salmon forecasting has traditionally relied on cohort or “sibling” regression methods, in which the return abundance of an older age class is predicted by the abundance of younger age classes, returning in prior years but originating from the same river system and brood year. For example, the return abundance of four-year old fish are predicted by the returns of three-year old fish observed in the previous season. There are good reasons for this practice: trends in sibling abundance integrate across many environmental factors affecting salmon survival and returns. If a particular cohort suffers from poor environmental conditions, increased competition with conspecifics,  or a greater abundance of predators, the demographic impacts of these changes will be reflected in the return abundance of younger age classes from the same cohort (i.e. originating from the same brood year) that experienced similar environmental conditions or resource availability, and by extension survival, as juveniles. However, the sibling regression method does have shortcomings, most notably the underlying assumption of consistency in the relationship between the abundance of different age classes and stability in the maturation schedule (i.e. the probability of salmon maturing and returning to freshwater to spawn after a given number of years in the ocean). For example, if environmental conditions cause members of a cohort of salmon to spend more time at sea than in previous years, a sibling regression might under-predict the number of future returns. In addition, sibling regression requires accurate observations of the return abundance for younger sibling age classes, limiting the performance of these models in predicting returns of younger salmon for which few or no siblings (i.e. returning younger age classes) have yet been observed.
 
-We hypothesize that directly incorporating data on candidate potentially time-varying factors influencing and correlated with salmon return size, rather than relying on sibling returns alone, may help improve forecast performance given the intricate dynamics of salmon populations. However, these variables are likely to have complex, non-linear, and non-stationary effects on salmon populations, potentially obscuring their value from conventional parametric statistical approaches, with user-defined parameters, structures, and error distributions. In order to explore this possibility, we used a suite of six methods together with a panel of data on salmon populations and environmental conditions in Bristol Bay, Alaska to explore what if any improvements in forecast skill could be achieved. These models included two machine learning methods, a random forest (rand\_forest), [@breiman2001; @wright2017] and a boosted regression tree, boost\_tree, [@chen2020], empirical dynamic models (edm) [@sugihara1990; @munch2020; @ye2020], and dynamic linear models (dlm)[ @petris2009; @pole1994]. We also included a lag-1 model, as a performance benchmark, in which the predicted returns for a given age group and river system in a year are equal to the observed returns for that that age group in that river system in the prior year. Our goal here was not to establish whether one type of model performs inherently better than others, but to evaluate how use of different computer age models and data types can collectively improve forecast ability and identify frontiers in forecast ability given available data. We also evaluated the performance of a model ensemble which weights predictions from individual ensemble members (alternative predictive model types) based on recent performance, and compare this with observed performance from the Fisheries Research Institute (FRI) forecast, a benchmark forecast that utilizes a qualitative ensemble approach based on evaluation of recent performance for alternative models within the ensemble. 
+```{r}
+fri_mape <- system_forecast %>% 
+  filter(model == "fri") %>% 
+  yardstick::mape(observed, forecast)
 
+```
+
+
+The Fisheries Research Institute (FRI) at the University of Washington and the Alaska Department of Fish and Game (ADFG) have been providing preseason forecasts for the annual abundance of sockeye salmon returning to the major river systems and fishing districts of Bristol Bay since at least 1967 (Cunningham pers. comm.). While the exact statistical methods used for FRI and ADFG forecasts have evolved over time, throughout their history they have primarily been based on the relationship between the abundance of successive age classes of salmon returning in different years. While these traditional forecast methods have been useful in guiding decisions by fishers, processors, and managers alike, improvements in the accuracy and precision of preseason forecasts would represent a valuable advance.
+
+<!-- Between the years 2000 and 2020, the mean absolute percent error (MAPE) of total sockeye returns across the seven major river systems of the published FRI forecast has been `r scales::percent(fri_mape$.estimate / 100)`. How might we improve on these results?  -->
+
+Conditional on the particular makeup of data used in an analysis, there exists some "frontier" of maximum predictive ability contained in the available data. However, a model might perform far below its predictive frontier if it is severely misspecified, i.e. if the assumptions of the model do not properly reflect reality. Identifying the best predictive model in an ecological setting has conventionally been achieved my manual construction and comparison of competing models via some information criteria. However, this can be a cumbersome process, particularly as the number of covariates and subsequently the number of potential interactions and non-linearities increases. 
+
+Alternatively, non-parametric methods such as machine learning excel at identifying and exploiting potentially complex correlations between variables in a system. Parametric statistical methods often restrict themselves to simplified (e.g. linear) and often non-dynamic representations of natural systems, both for analytical tractability and to facilitate heuristic understanding of underlying processes. Typically, these parametric statistical methods are concerned with explicitly estimating and interpreting model parameters rather than solely forecasting responses, such as population size [@beyan2020; @malde2020]. We would expect non-parametric methods to show substantial improvement in predictive power when the "true" underlying system linking observed variables and outcomes differs dramatically from the simplified representations of the system approximated by more parametric statistical approaches. In the case of salmon, we know that inter-annual variation in run sizes is affected by a wide range of ecosystem variables, including spawning success, river conditions, oceanic predator and prey abundance, and competition with other salmonids [@connors2020]. By reducing the potential for predictive model misspecification, non-parametric models that essentially seek to “learn” the best model structure for the sole purpose of maximizing out-of-sample predictive performance can provide a test of the predictive information content of the available data themselves. Utilizing multiple parametric and non-parametric modeling approaches allows us to develop a clearer picture of the frontier in predictive ability achievable given a certain set of data. 
+
+
+Salmon forecasting has traditionally relied on cohort or “sibling” regression methods, in which the return abundance of an older age class is predicted by the abundance of younger age classes, returning in prior years but originating from the same river system and brood year. For example, the return abundance of four-year old fish are predicted by the returns of three-year old fish observed in the previous season. There are good reasons for this practice: trends in sibling abundance integrate across many environmental factors affecting salmon survival and returns. If a particular cohort suffers from poor environmental conditions, increased competition with conspecifics,  or a greater abundance of predators, the demographic impacts of these changes will be reflected in the return abundance of younger age classes from the same cohort (i.e. originating from the same brood year) that experienced similar environmental conditions or resource availability, and by extension survival, as juveniles. 
+
+However, the sibling regression method does have shortcomings, most notably the underlying assumption of consistency in the relationship between the abundance of different age classes and stability in the maturation schedule (i.e. the probability of salmon maturing and returning to freshwater to spawn after a given number of years in the ocean). For example, if environmental conditions cause members of a cohort of salmon to spend more time at sea than in previous years, a sibling regression might under-predict the number of future returns. In addition, sibling regression requires accurate observations of the return abundance for younger sibling age classes, limiting the performance of these models in predicting returns of younger salmon for which few or no siblings (i.e. returning younger age classes) have yet been observed.
+
+We hypothesize that directly incorporating data on candidate potentially time-varying factors influencing and correlated with salmon return size, rather than relying on sibling returns alone, may help improve forecast performance given the intricate dynamics of salmon populations. However, these variables are likely to have complex, non-linear, and non-stationary effects on salmon populations, potentially obscuring their value from conventional parametric statistical approaches, with user-defined parameters, structures, and error distributions. In order to explore this possibility, we used a suite of six methods together with a panel of data on salmon populations and environmental conditions in Bristol Bay, Alaska to explore what if any improvements in forecast skill could be achieved. These models included two machine learning methods, a random forest (rand\_forest), [@breiman2001; @wright2017] and a boosted regression tree, boost\_tree, [@chen2020], empirical dynamic models (edm) [@sugihara1990; @munch2020; @ye2020], and dynamic linear models (dlm)[ @petris2009; @pole1994]. We compared each model to the performance of a lag-1 model in which the predicted returns for a given age group and river system in a year are equal to the observed returns for that that age group in that river system in the prior year.  We also evaluated the performance of a model ensemble which weights predictions from individual ensemble members (alternative predictive model types) based on recent performance, and compare this with observed performance from the Fisheries Research Institute (FRI) forecast, a benchmark forecast that utilizes a qualitative ensemble approach based on evaluation of recent performance for alternative models within the ensemble. 
+
+Other studies have incorporated various time-varying parametric and non-parametric models, including versions of the models used here, for salmon forecasting [@holt2004;@velez-espino2019;@dfo2018;@yi2019]. Our study builds on this literature not by seeking to establish whether one type of model performs inherently better than others, but by examining the ability of a suite of these models to collectively improve salmon forecasting by leveraging correlations both within and among river systems and age classes in Bristol Bay.  In doing so, we demonstrate how collections of parametric and non-parametric models can be used to identify frontiers in forecasting ability available in a given dataset. 
 
 
 # Materials and methods {.unnumbered}
@@ -335,6 +358,22 @@ The general structure of our methods are as follows:
 3. Individual models were aggregated into a statistical ensemble model based on their historic performance against the lag-1 benchmark
 
 4. The statistical ensemble model was then compared to a more qualitatively constructed ensemble model, in which researchers manually select individual models from an evolving suite of methods based on recent (20-year) performance. This is the method historically used to generate Bristol Bay salmon forecasts, although the individual prediction models within the selection suite have changed over time. As such this method provides a *status quo* benchmark to which individual models and statistical ensembles may be compared. 
+
+
+## Data
+
+### Salmon returns
+
+```{r}
+unique(forecasts$age_group)
+```
+
+
+The primary data source of this analysis are historic numbers of sockeye salmon by age group returning to each of the seven Bristol Bay river systems considered here (Fig.\@ref(fig:returns)). We included data from 1963 through 2020, omitting pre 1963 data as that year marks a major change in the data collection methods. We generated forecasts for the four most prominent age groups in the data, the youngest of which being the 1.2 age group. However, we include data from younger age groups as candidate covariates. For example, returns of 1.1 fish in the year 2000 are used to generate forecasts of 1.2 fish in the year 2021, even though we never forecast 1.1 fish explicitly. 
+
+### Environmental Covariates
+
+### Conspecifics
 
 
 ## Machine Learning Models {.unnumbered}
@@ -426,7 +465,8 @@ A SRMSE of one means that a model has predictive performance equal to that of th
 
 All models were compared based upon one-step-ahead forecast skill, defined by SRMSE. Each of the evaluated models generate forecasts at the resolution of age group and river system in a given year. Forecasts for a given year are produced by a model trained on all years after 1963 and prior to the year for which a forecast is desired. This is performed in a rolling fashion, such that for example forecasts for the year 2018 are produced by a model trained on data from 1963 to 2017, the 2019 forecast by a model trained on data from 1963 to 2018, and so on. One-step-ahead performance skill was preferred over simple leave-one-out cross validation because it better aligns with the context of preseason forecasting (i.e. data in hand through the current year are used to predict the next), and should be expected to more appropriately reflect true forecast uncertainty in the presence of periodic regime shifts in salmon production and the potential for unmodeled autocorrelation. Each method has its own ways of tuning and validating the model, but all such steps are performed using only the training data: all data for the forecast year are held out until the final prediction.
 
-Predictive performance of candidate models was calculated by generating 1-year ahead forecasts for each target river system by age class combination, as a rolling window from the year 2000 to 2019. This method for quantifying forecast performance is most applicable to the context of this ecological forecasting problem as each candidate model is trained on data up to, but not including, the prediction year. Even though each model predicts at the resolution of age group and river system, we generally compare model performance at coarser resolutions (for example river system across all age groups). In those cases, we first aggregate the total returns at the resolution in question (e.g. sum all observed and forecast returns across all age groups for a given river system), and then calculate SRMSE based on those aggregated data.
+Predictive performance of candidate models was calculated by generating 1-year ahead forecasts for each target river system by age class combination, as a rolling window from the year 2000 to 2019. This method for quantifying forecast performance is most applicable to the context of this ecological forecasting problem as each candidate model is trained on data up to, but not including, the prediction year. Even though each model generates predictions at the resolution of age group and river system, we generally compare model performance at coarser resolutions (for example river system across all age groups). In those cases, we first aggregate the total returns at the resolution in question (e.g. sum all observed and forecast returns across all age groups for a given river system), and then calculate SRMSE based on those aggregated data. This allows the best model to differ based on the scale of the predictions. For example, the model that performs best when measured at the level of age group and river system by not be the model the performs best in terms of total system returns. 
+
 
 
 ## Ensemble Models {.unnumbered}
@@ -466,7 +506,7 @@ system_forecast_figure
 
 ### Age Group Forecasts {.unnumbered}
 
-While total river system returns are the primary metric of interest to the Bristol Bay sockeye fishery, the age composition of the returns are also important given their influence of the average size and therefore price for each salmon harvested, and options for processed product forms.  As such we also examined the ability of our tested models to generate predictions at the age group level. In retrospect different models performed best for each of the four age groups considered, and at least one model was able to improve substantially on a lag-1 model in all age groups (Fig.\@ref(fig:age-forecast)).  R^2^ values at the age group level ranged from a low of `r round(min(age_r2$.estimate),2)` in the `r age_r2$age_group[which.min(age_r2$.estimate)]` age group to a high of `r round(max(age_r2$.estimate),2)` in the `r age_r2$age_group[which.max(age_r2$.estimate)]` age group.
+While total river system returns are the primary metric of interest to the Bristol Bay sockeye fishery, the age composition of the returns are also important given their influence of the average size and therefore price for each salmon harvested, and options for processed product forms.  As such we also examined the ability of our tested models to generate predictions at the age group level. In retrospect different models performed best for each of the four age groups considered, and at least one model was able to improve substantially on a lag-1 model in all age groups (Fig.\@ref(fig:age-forecast), SRMSE <1 in all cases, with at minimum a 20% improvement over the AR1 model).  R^2^ values at the age group level ranged from a low of `r round(min(age_r2$.estimate),2)` in the `r age_r2$age_group[which.min(age_r2$.estimate)]` age group to a high of `r round(max(age_r2$.estimate),2)` in the `r age_r2$age_group[which.max(age_r2$.estimate)]` age group.
 
 ```{r age-forecast, fig.cap="Observed (grey ribbons) and predicted (points) numbers of sockeye salmon within each age group returning to Bristol Bay, Alaska. Age group refers to 'years spent in freshwater'_'years spent in ocean'. Color corresponds to the best performing model in terms of scaled root mean squared error (SRMSE), transparency reflects the SRMSE of the best performing model, noted in the top left corner of each panel."}
 age_forecast_figure
@@ -522,10 +562,9 @@ system_varimportance_figure
 
 # Discussion {.unnumbered}
 
-While our tested methods made meaningful improvements in forecast accuracy in many cases, no one model type stood out as a clear winner, highlighting the need for multi-model inference in ecological forecasting.
+While our tested methods made meaningful improvements in forecast accuracy in many cases, no one model type stood out as a clear winner, highlighting the need for multi-model inference in ecological forecasting. Viewed in retrospect individual models tested here were able to make substantial improvements in forecast accuracy (Fig.\@ref(fig:sys-forecast)-\@ref(fig:age-forecast)). However, the best retrospective model over the years 2000-2019 varied widely by age group and system, presenting a challenge for decision makers charged with picking which model to use for a particular forecast. Ensemble models such as the random forest ensemble (i.e. a "model-of-models") constructed here can help users separate out the signal from the noise in historic model performance, which in this case resulted in modest improvements in forecast still in the majority of river systems evaluated in this study. 
 
-
-Viewed in retrospect individual models tested here were able to make substantial improvements in forecast accuracy (Fig.\@ref(fig:sys-forecast)-\@ref(fig:age-forecast)). However, the best retrospective model over the years 2000-2019 varied widely by age group and system, presenting a challenge for decision makers charged with picking which model to use for a particular forecast. Ensemble models such as the random forest ensemble (i.e. a "model-of-models") constructed here can help users separate out the signal from the noise in historic model performance, which in this case resulted in modest improvements in forecast still in the majority of river systems evaluated in this study. 
+Our results cannot be interpreted as generalized assessment of the relative strengths or weaknesses of the types of models evaluated here. Model performance is a complex function of the suitability of a given model for the task at hand, the data made available to it, and a wide range of design decisions. This is reflected in the diversity of models classified as the best performer depending on the specific question being asked of them in our analysis. Our claim is not that boosted regression trees for example are inherently best at predicting the dynamics of the Wood river system, but rather that under these particular conditions boosted regression tree happened to work best. Attempts to classify more general "best" models for salmon forecasting would require considering a broader range of empirical and simulated states, as well increased standardization of the design decision process. 
 
 <!-- The clearest outcome from our results at the river system level is that retrospectively no one model performed better than all others, and river systems varied greatly in their predictability. Why is it that some models outperform others at the river system level? One explanation is that simply, given a set of roughly equally effective models and a short period of cross-validation (n = 19 years), we would expect different models to perform best in different river systems by chance alone in some cases. The mean difference in SRMSE between the best and second-best models by river system was only `r prettyNum(mean_srmse_delta$mmd, digits = 1)`, demonstrating that several models are capable of outperforming a lag-1 model with roughly equal skill in many cases. -->
 
@@ -536,7 +575,7 @@ Using multiple types of highly flexible modern computational tools can provide i
 
 <!-- annual return of sockeye salmon to the river systems of Bristol Bay Alaska is an economic and ecological marvel, providing critical nutrients and value to Alaska's ecosystems, economy, and people. Efficient and sustainable use of this critical natural and cultural resource depends in part on the ability to accurately forecast the number of salmon that will return each year, prior to the fishing season. As such, accurate and precise forecasts for future salmon abundance are vitally important to the biological and economic sustainability of this important fishery. Allowing environmental and cross-stock correlations to dynamically inform the predictions of sockeye salmon through modern predictive models produced meaningful improvements in our ability to forecast annual returns of these iconic fish. -->
 
-That forecasts for individual river systems can be improved by treating historic returns in other river systems as predictors, as evidenced by the machine learning models is an important finding. The historically used parametric salmon forecast methods have largely focused on relationships among age classes within single river systems in isolation. While perhaps not surprising given the juvenile salmon from multiple river systems enter the same area of the eastern Bering Sea during approximately the same season and likely experience similar survival conditions at ocean entry, this result suggests that sharing age-specific return abundance information among salmon stocks and river systems within Bristol Bay can inform and improve predictive performance.
+That forecasts for individual river systems can be improved by treating historic returns in other river systems as predictors, as evidenced by the machine learning models, is an important finding. The historically used largely parametric salmon forecast methods have largely focused on relationships among age classes within single river systems in isolation. While perhaps not surprising given the juvenile salmon from multiple river systems enter the same area of the eastern Bering Sea during approximately the same season and likely experience similar survival conditions at ocean entry, this result suggests that sharing age-specific return abundance information among salmon stocks and river systems within Bristol Bay can inform and improve predictive performance.
 
 In addition to the return abundance of salmon from the home and neighboring river systems, we found that oceanographic variables including mean sea surface temperature and sea surface air pressure throughout the spatial and temporal range of the oceanic phase of these salmon were informative predictors for some river systems. In addition, as reported by @connors2020, in some instances the abundance of other salmon species (chum salmon, *Oncorhynchus keta*, in western Kamchatka and northern British Columbia, pink salmon, *Oncorhynchus gorbuscha*, in Prince William sound) proved important predictors of Bristol Bay salmon return abundance (Fig.\@ref(fig:imp-plot)). Going forward, data on freshwater conditions, interspecies competitors, and the size structure of the salmon populations may prove useful in improving forecast accuracy. 
 
