--- a/references.bib
+++ b/references.bib
@@ -642,4 +642,56 @@
 }
 
 
+@article{holt2004,
+  title = {Long-Term Trends in Age-Specific Recruitment of Sockeye Salmon ({{Oncorhynchus}} Nerka) in a Changing Environment},
+  author = {Holt, Carrie A and Peterman, Randall M},
+  year = {2004},
+  month = dec,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {61},
+  number = {12},
+  pages = {2455--2470},
+  publisher = {{NRC Research Press}},
+  issn = {0706-652X},
+  doi = {10.1139/f04-193},
+  file = {/Users/danovan/Zotero/storage/HGG9IR53/Holt and Peterman - 2004 - Long-term trends in age-specific recruitment of so.pdf}
+}
+
+
+@techreport{velez-espino2019,
+  title = {{{ForecastR}}: Tools to Automate Forecasting Procedures for Salmonid Terminal Run and Escapement. {{Final Report}} Submitted to the {{Southern Boundary Restoration}} and {{Enhancement Fund}}, {{Pacific Salmon Commission}}, {{Vancouver BC}}},
+  author = {{V{\^e}lez-Espino}, L.A. and Parken, C.K. and Clemons, E.R. and Peterson, R and Ryding, K and Folkes, M and Pestal, G},
+  year = {2019},
+  institution = {{Pacific Salmon Comission}}
+}
+
+
+@techreport{dfo2018,
+  title = {Pre-Season Run Size Forecasts for {{Fraser River Sockeye}} ({{Oncorhynchus}} Nerka) Salmon in 2018},
+  author = {{DFO}},
+  year = {2018},
+  institution = {{DFO Can. Sci. Advis. Sec. Sci. Resp}}
+}
+
+
+@incollection{yi2019,
+  title = {How {{Fraser River Sockeye Salmon}} Recruitment Was Affected by {{Climate Change}}: {{A}} Model Study},
+  booktitle = {State of the Physical, Biological and Selected Fishery Resources of {{Pacific Canadian}} Marine Ecosystems in 2018},
+  author = {Yi, X and Hawkshaw, M and Patterson, D and Hourston, R and Chandler, P},
+  editor = {Boldt, J.L. and Leonard, J and Chandler, P.C.},
+  year = {2019},
+  series = {Can. {{Tech}}. {{Rep}}. {{Fish}}. {{Aquat}}. {{Sci}}.},
+  number = {3314:214-217}
+}
+
+
+@Manual{rcoreteam2021,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2021},
+    url = {https://www.R-project.org/},
+}
+
 
